Update all style files

--- a/styles/analysis.sty
+++ b/styles/analysis.sty
@@ -1,2 +1,17 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{analysis}
+
+\RequirePackage{physics}
+
+\newcommand{\CCx}{\CC_\infty}
+\DeclareMathOperator{\GL}{GL}
+
+\newcommand{\comp}{\circ}
+\newcommand{\concat}{\star}
+
+\DeclareMathOperator{\Log}{Log}
+\DeclareMathOperator{\powerset}{\mathcal{P}}
+\DeclareMathOperator{\residue}{Res}
+\DeclareMathOperator{\interior}{int}
+\DeclareMathOperator{\closure}{Cl}
+\DeclareMathOperator{\diameter}{diam}
