--- a/Oxford/2023/Graph Theory.tex
+++ b/Oxford/2023/Graph Theory.tex
@@ -35,7 +35,7 @@ In all definitions below, we assume $G = (V, E)$ is any graph.
   \[ N_G(v) = \set{w \in V: vw \in E} \]
 \end{definition}
 
-\begin{definition}
+\begin{definition}{Regular}{}
   
 \end{definition}
 
